# TiMBA

./: .coveragerc  .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  COPYRIGHT  MANIFEST.in  README.md  TODO.md  citation.bib  codemeta.json  install_TiMBA_ToolBox_from_pip.txt  pyproject.toml  requirements.txt  zenodo.json
.github/ISSUE_TEMPLATE/: bug_report.md  confi.yml  feature_request.md  question.md
.github/workflows/: actions.yml  publish.yml  sonarscan.yml
TiMBA/: main.py
TiMBA/Toolbox/classes/: import_data.py
TiMBA/cli/: cli.py
TiMBA/data/input/03_Serialization/: AddInfoContent.pkl  WorldDataContent.pkl  WorldPriceContent.pkl
TiMBA/data_management/: DataManager.py  Load_Data.py  ParameterCollector.py
TiMBA/data_validation/: DataValidator.py
TiMBA/logic/: model.py  model_extensions.py  model_helpers.py
TiMBA/main_runner/: main_runner.py
TiMBA/parameters/: Defines.py  __init__.py  paths.py  sust_harvest.py
TiMBA/results_logging/: base_logger.py
TiMBA/user_io/: default_parameters.py
paper/: paper.bib  paper.md
test/: test_DataContainers.py  test_TiMBA.py  test_extensions.py  test_external_imports.py
